# FeatureCalculator

./: .gitmodules  CMakeLists.txt  main.cpp
calculator/: CMakeLists.txt  calculator.cpp  calculator.h
cmake/: add_git_submodule.cmake
